--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <div class="nav-left">
             <img src="./assets/images/logo.png" alt="Logo">
-            <input type="text" placeholder="Search Mediabook..">
+            <input type="text" placeholder="Search">
         </div>
 
         <div class="nav-middle">
